--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Basic VR Model Viewer</title>
-  <style>body,html{height: 100%;width:100%;margin:0;padding:0;overflow:hidden;}#vrbutton {position: fixed;bottom: 0;right: 0;left: 0;margin: 1em 2em0;border: 2px solid currentColor;outline: none;font-size: 2vw;padding: .5em 1em;background: transparent; color: #fff;</style>
+  <style>
+    body,html{
+      height: 100%;
+      width:100%;
+      margin:0;
+      padding:0;
+      overflow:hidden;
+    }
+    #vrbutton {
+      position: fixed;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      margin: 1em 2em;
+      border: 2px solid currentColor;
+      outline: none;
+      font-size: 2vw;
+      padding: .5em 1em;
+      background: transparent;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
   <script src="js/three.min.js"></script>
