--- a/index.html
+++ b/index.html
@@ -141,10 +141,24 @@
           objLoader.load(model, function (obj) {
             // Adust the scale
             obj.scale.set(.5,.5,.5);
-            // Position it
-            obj.position.set(0, -1, -2);
-            // Add it to the scene once it has loaded
-            scene.add(obj);
+
+
+            // Positions for each of the four models
+            // format is [X, Y, Z]
+            var positions = [
+              [0, -1, -3],
+              [0, -1, 3],
+              [3, -1, 0],
+              [-3, -1, 0]
+            ];
+
+            // Then we use a loop to create 4 instances of the model and position them
+            for (var i=0; i<4; i++) {
+              var _obj = obj.clone();
+              _obj.position.set(positions[i][0], positions[i][1], positions[i][2]);
+              _obj.lookAt(new THREE.Vector3(camera.position.x, positions[i][1], camera.position.z));
+              scene.add(_obj);
+            }
           });
         });
 
